--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorNight">#303030</color>
+    <color name="colorNightDark">#212121</color>
+    <color name="colorNightDarkest">#151515</color>
+    <color name="colorNightAccent">#FFEA00</color>
 </resources>
